2000-03-03  Michael Natterer  <mitch@gimp.org>

	* app/iscissors.c: this time cursor_update feedback is _really_
	correct: for closed curves, show the "point" cursor if a mouse
	click will modify the curve and the "bad" cursor if a mouse click
	will do nothing. Seems it was not too hard to understand how it
	works...

	* plug-ins/common/uniteditor.c: for consistency, did a
	s/"Delete","Undelete"/"Don't Save","Save"/.

Thu Mar  2 23:27:59 CET 2000  Marc Lehmann <pcg@goof.com>

	* configure.in: Fix $dirprefix to $topdir in perl part.

Thu Mar  2 21:45:17 GMT 2000 Andy Thomas <alt@gimp.org>

        * gimp/app/nav_window.c

	The "follow display" nav window is now hidden when the 
        last window is closed.

2000-03-02  Michael Natterer  <mitch@gimp.org>

	* app/iscissors.c: Iscissors was using rect_select_cursor_update
	which is totally wrong since the oper_update_func tool method was
	introduced (in fact it didn't even give correct feedback before).

	Added oper_update_func, modifier_key_func, cursor_update_func for
	Iscissors which give correct cursor_update feedback now. The only
	remaining inconsistency occurs when a curve is closed: There's no
	way to find out if the mouse is over a control point/line or
	outside (without touching the Iscissors engine, which I didn't
	want to do because I don't understand how it works ;-).

2000-03-02  Michael Natterer  <mitch@gimp.org>

	* app/channel_ops.c: s/"Fill Options"/"Fill Type"/

	* app/gimpparasite.c: removed _() around the parasiterc header.

Thu Mar  2 01:02:44 CET 2000  Sven Neumann <sven@gimp.org>

	* app/measure.c: Fixed my latest "fix" which introduced a new
	problem. Clean statusbar and info window when starting a new
	measurement.

2000-03-02  Michael Natterer  <mitch@gimp.org>

	* app/rect_select.[ch]: added a modifier_key_func which gives
	immediate cursor_update feedback on modifier key events.

	* app/ellipse_select.c
	* app/free_select.c
	* app/fuzzy_select.c