@@ -1,5 +1,10 @@
 2000-03-03  Michael Natterer  <mitch@gimp.org>
 
+	* libgimp/gimpprotocol.c (_gp_proc_return_destroy): fixed a
+	memleak: free the message's name before freeing the message itself.
+
+2000-03-03  Michael Natterer  <mitch@gimp.org>
+
 	* app/iscissors.c: this time cursor_update feedback is _really_
 	correct: for closed curves, show the "point" cursor if a mouse
 	click will modify the curve and the "bad" cursor if a mouse click
